# rustcraft

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: chunk_meshing.rs  generation_and_meshing.rs  terrain_generation.rs
src/: app.rs  lib.rs  main.rs
src/core/: block.rs  chunk.rs  mesh.rs  mod.rs  voxel.rs
src/core/meshing/: face_gen.rs  greedy_mesher.rs  mesh.rs  mod.rs  vertex.rs
src/core/render/: camera.rs  face_gen.rs  frustum_culling.rs  greedy_mesher.rs  mod.rs  renderer.rs  shader.wgsl  texture.rs  texture_array.rs  vertex.rs
src/core/world/: loading_managment.rs  mod.rs  terrain_generator.rs  world.rs
src/world/: loading_managment.rs  mod.rs  terrain_generator.rs  world.rs
