[package]
name = "rustcraft"
version = "0.1.2"
edition = "2024"

[dependencies]
wgpu = "*"
bytemuck = "*"
cgmath = "*"
log = "*"
simple_logger = "*"
winit = "*"
futures = "*"
once_cell = "*"
image = "*"
anyhow = "*"
noise = "*"
rand = "*"
rayon = "*"

[dev-dependencies]
criterion = "*"

[lints.rust]
dead_code = "allow"

[[bench]]
name = "terrain_generation"
harness = false

[[bench]]
name = "chunk_meshing"
harness = false

[[bench]]
name = "generation_and_meshing"
harness = false