[package]
name = "rustcraft"
version = "0.1.3"
edition = "2024"

[dependencies]
wgpu = "*"
bytemuck = "*"
cgmath = "*"
log = "*"
simple_logger = "*"
winit = "*"
futures = "*"
once_cell = "*"
image = "*"
anyhow = "*"
noise = "*"
fastnoise-lite = "*"
rand = "*"
rayon = "*"
hashbrown = "*"
tcmalloc-better = "*"

[dev-dependencies]
criterion = "*"

[profile.release]
incremental = true

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.most_release]
inherits = "release"
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

[lints.rust]
dead_code = "allow"

[[bench]]
name = "terrain_generation"
harness = false

[[bench]]
name = "chunk_meshing"
harness = false

[[bench]]
name = "generation_and_meshing"
harness = false